// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render children props 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#4F6D7A",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <View />
</RCTSafeAreaView>
`;

exports[`should use the specified backgroundColor if provided 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#4F6D7A",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;
